[package]
name = "baywatch"
version = "0.1.0"
authors = ["kahlys <youennlaborde@live.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bollard = "0.9"
futures-util = "0.3"
tokio = { version = "0.2", features = ["full"] }