[package]
name = "baywatch"
version = "0.1.0"
authors = ["kahlys <youennlaborde@live.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bollard = "0.10.1"
chrono = "0.4"
futures-util = "0.3"
prettytable-rs = "^0.8"
tokio = { version = "1.5.0", features = ["full"] }